[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "taskcat"
version = "0.9.33"
description = "An OpenSource Multi Region Cloudformation Testing and Deployment Python Module"
authors = ["Tony Vattathil, Jay McConnell, Andrew Glenn, Santiago Cardenas, Shivansh Singh"]
license = "Apache License 2.0"
readme = "README.md"
packages = [ { include = "taskcat"} ]

[tool.poetry.scripts]
taskcat = "taskcat:main"

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.24.94"
reprint = "^0.6.0"
tabulate = "^0.9.0"
cfn-lint = "0.66.1"
docker = ">=4.0,<5.0"
dulwich = ">=0.19,<1.0"
botocore = ">=1.12.21,<2.0"
jinja2 = ">=3.1.1,<4.0"
requests = "^2.28.1"
pyyaml = ">=5.1,<6.0"
markupsafe = "^2.1.1"
dataclasses-jsonschema = ">=2.9.0,<2.15.2"
yattag = "^1.14.0"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
pylint = ">=2.3,<3.0"
pre-commit = ">=2.20.0,<2.21.0"
pytest-cov = "^4.0.0"
codecov = "^2.1.12"
pip = "^22.3"
